--- a/lfront/src/index.html
+++ b/lfront/src/index.html
@@ -17,7 +17,8 @@
 </head>
 
 <body>
-  <div class="mat-app-background basic-container">
+  <!-- <div class="mat-app-background basic-container"> -->
+  <div class="basic-container">
     <app-root>loading</app-root>
   </div>
 </body>
